@@ -44,35 +44,6 @@ PERL_MB_OPT="--install_base \"$HOME/perl5\""
 PERL_LOCAL_LIB_ROOT="$HOME/perl5"
 PERL_MM_OPT="INSTALL_BASE=$HOME/perl5"
 
-#########
-# Idris #
-#########
-
-# Set this to empty so it can be set correctly in the Guix profile.
-IDRIS_LIBRARY_PATH=
-
-########
-# Guix #
-########
-
-export GUIX_PROFILE="$HOME/.guix-profile"
-export GUIX_LOCPATH="$GUIX_PROFILE/lib/locale"
-GUIX_CERTS_DIR="$GUIX_PROFILE/etc/ssl/certs"
-if [[ -d $GUIX_CERTS_DIR ]]; then
-  GUIX_CERT_FILE="$GUIX_CERTS_DIR/ca-certificates.crt"
-  if [[ -f $GUIX_CERT_FILE ]]; then
-    export SSL_CERT_DIR="$GUIX_CERTS_DIR"
-    export SSL_CERT_FILE="$GUIX_CERT_FILE"
-  fi
-fi
-
-GUIX_PROFILE_FILE="$GUIX_PROFILE/etc/profile"
-[[ -f "$GUIX_PROFILE_FILE" ]] \
-  && source "$GUIX_PROFILE_FILE"
-
-# Set locale for Guix
-export LC_ALL=en_GB.UTF-8
-
 # if running bash
 if [ -n "$BASH_VERSION" ]; then
     # include .bashrc if it exists
