@@ -21,17 +21,6 @@ if [ $(which setxkbmap) ]; then
   fi
 fi
 
-# Add fonts installed with Guix to path (if available)
-GUIX_FONT_PATH="$GUIX_PROFILE/share/fonts"
-for fonttype in opentype truetype; do
-  fontpath="$GUIX_FONT_PATH/$fonttype"
-  if [ -d $fontpath ]; then
-    # First remove it from the path, so we don't get duplicates.
-    xset -fp $fontpath 2>/dev/null
-    xset +fp $fontpath
-  fi
-done
-
 # Key repeat delay: 500ms delay with 33Hz repeat rate.
 xset r rate 500 33
 
