@@ -1,42 +1,0 @@
-#!/usr/bin/env sh
-
-# Usage: guix-application-setup.sh
-
-# Per-user Guix initial configuration script.
-# Run this script (after ensuring Guix is up-to-date) to configure Guix as
-# described in
-# https://www.gnu.org/software/guix/manual/html_node/Application-Setup.html
-
-setupLocales() {
-  echo "Setting up locales..."
-  guix package -i glibc-locales glibc-utf8-locales
-}
-
-setupNameServiceSwitch() {
-  echo "Setting up Name Service Switch..."
-  nscd
-  true
-}
-
-setupFonts() {
-  echo "Setting up fonts..."
-  for fontPackage in gs-fonts font-dejavu font-gnu-freefont-ttf; do
-    echo "Installing $fontPackage"
-    guix package -i $fontPackage
-  done
-  mkdir -p $GUIX_PROFILE/share/fonts/truetype
-}
-
-setupCertificates() {
-  echo "Setting up certificates..."
-  guix package -i nss-certs
-}
-
-applicationSetup() {
-  setupLocales \
-  && setupNameServiceSwitch \
-  && setupFonts \
-  && setupCertificates
-}
-
-applicationSetup
